--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<!-- <div class="cs-container-voice-note">
+<div class="cs-container-voice-note">
     <div class="cs-container-time">
         <p>00:07</p>
     </div>
@@ -40,4 +40,4 @@
             <mat-icon>delete</mat-icon>
         </button>
     </div>
-</div> -->
+</div>
